# jxltk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
contrib/jxlazy/: CMakeLists.txt  LICENSE  README.md  decoder.cpp  decoder_test.cpp  exception.cpp  info.cpp  info.h  util.cpp  util.h  util_test.cpp
contrib/jxlazy/include/jxlazy/: decoder.h  exception.h
contrib/jxlazy/testfiles/: frame0.jxl  frame0_alphaonly.jxl  frame0_depthonly.jxl  frame1 (-2-1).jxl  frame2 (+6+1).jxl  generated.jxl  jpeg.jpg.jxl  lossy.jxl  orient.jxl  premul.jxl
doc/: 10_seconds_countdown.gif.jxl  10_seconds_countdown.gif.jxl.txt
src/: add.cpp  add.h  add_test.cpp  cmdline.cpp  cmdline.h  color.cpp  color.h  color_test.cpp  common.cpp  common.h  enums.cpp  enums.h  enums_test.cpp  except.cpp  except.h  log.cpp  log.h  main.cpp  merge.cpp  merge.h  merge_test.cpp  mergeconfig.cpp  mergeconfig.h  pixmap.cpp  pixmap.h  split.cpp  split.h  util.cpp  util.h  util_test.cpp
testfiles/: gray256_h+v.jxl  gray256_h-v.jxl  gray256_horizontal.jxl  gray256_v-h.jxl  gray256_vertical.jxl  premul.jxl  rast.jxl
testfiles/crop/: croptest.json  frame0_blend_+8+7.jxl  frame1_add_+0+0.jxl  frame2_add.jxl  frame3_blend.jxl
testfiles/subtract/: frame0.jxl  frame1.jxl
vcpkg/: portfile.cmake  vcpkg.json
